make the script executable

--- a/cluster/apps/network/dns-update/cron-job.yaml
+++ b/cluster/apps/network/dns-update/cron-job.yaml
@@ -30,3 +30,4 @@ spec:
             - name: dns-update
               secret:
                 secretName: dns-update-secret
+              defaultMode: 0777
