figure out what's in the folder

--- a/cluster/apps/network/dns-update/cron-job.yaml
+++ b/cluster/apps/network/dns-update/cron-job.yaml
@@ -22,7 +22,7 @@ spec:
                 - "/bin/sh"
               args:
                 - -c
-                - /scripts/dns-update.sh
+                - ls -lh /scripts
               volumeMounts:
                 - name: dns-update.sh
                   mountPath: "/scripts/dns-update.sh"
