--- a/cluster/apps/network/dns-update/cron-job.yaml
+++ b/cluster/apps/network/dns-update/cron-job.yaml
@@ -14,7 +14,7 @@ spec:
           restartPolicy: OnFailure
           containers:
             - name: dns-update
-              image: curlimages/curl
+              image: curlimages/curl:7.77.0
               env:
                 - name: TZ
                   value: "America/New_York"
