--- a/cluster/apps/media/plex/helm-release.yaml
+++ b/cluster/apps/media/plex/helm-release.yaml
@@ -29,36 +29,35 @@ spec:
       - 109
       - 100
     service:
-      enabled: true
-      type: LoadBalancer
-      externalIPs:
-      - 10.45.100.100
-      externalTrafficPolicy: Local
-      port:
-        port: 32400
+      main:
+        enabled: true
+        type: LoadBalancer
+        externalIPs:
+        - 10.45.100.100
+        externalTrafficPolicy: Local
+        port:
+          port: 32400
     ingress:
-      enabled: true
-      annotations:
-        kubernetes.io/ingress.class: "nginx"
-      hosts:
-      - host: "plex.${SECRET_DOMAIN}"
-        paths:
-        - path: /
-          pathType: Prefix
-      tls:
-      - hosts:
-        - "plex.${SECRET_DOMAIN}"
+      main:
+        enabled: true
+        annotations:
+          kubernetes.io/ingress.class: "nginx"
+        hosts:
+        - host: "plex.${SECRET_DOMAIN}"
+          paths:
+          - path: /
+            pathType: Prefix
+        tls:
+        - hosts:
+          - "plex.${SECRET_DOMAIN}"
     persistence:
       config:
         enabled: true
         existingClaim: plex-config-pvc
-    additionalVolumeMounts:
-    - name: media-nas
-      mountPath: "/data"
-    additionalVolumes:
-    - name: media-nas
-      persistentVolumeClaim:
-        claimName: media-nfs-tank-share-pvc
+      media:
+        enabled: true
+        existingClaim: media-nfs-tank-share-pvc
+        mountPath: /media
     addons:
       promtail:
         enabled: true
