--- a/cluster/apps/monitoring/s3-sync/cron-job.yaml
+++ b/cluster/apps/monitoring/s3-sync/cron-job.yaml
@@ -7,6 +7,8 @@ metadata:
 spec:
   schedule: "0 */1 * * *"
   concurrencyPolicy: Forbid
+  failedJobsHistoryLimit: 1
+  successfulJobsHistoryLimit: 3
   jobTemplate:
     spec:
       template:
@@ -19,7 +21,7 @@ spec:
             - name: TZ
               value: "America/New_York"
             envFrom:
-            - secretRef: 
+            - secretRef:
               name: thanos-ceph-bucket
             command:
             - "rclone"
