move thanos to banzaicloud chart

--- a/cluster/apps/monitoring/thanos/helm-release.yaml
+++ b/cluster/apps/monitoring/thanos/helm-release.yaml
@@ -8,59 +8,85 @@ spec:
   interval: 5m
   chart:
     spec:
-      # renovate: registryUrl=https://charts.bitnami.com/bitnami
+      # renovate: registryUrl=https://kubernetes-charts.banzaicloud.com
       chart: thanos
-      version: 5.0.0
+      version: 0.4.5
       sourceRef:
         kind: HelmRepository
-        name: bitnami-charts
+        name: banzaicloud-charts
         namespace: flux-system
       interval: 5m
   values:
+    sidecar:
+      metrics:
+        serviceMonitor:
+          enabled: true
     query:
       enabled: true
       replicaCount: 2
       replicaLabels:
         - replica
-      dnsDiscovery:
-        sidecarsService: kube-prometheus-stack-thanos-discovery
-        sidecarsNamespace: monitoring
-      ingress:
-        enabled: true
-        hostname: "thanos.${SECRET_DOMAIN}"
-        annotations:
-          kubernetes.io/ingress.class: nginx
-          nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16"
-          nginx.ingress.kubernetes.io/auth-url: "https://auth.${SECRET_DOMAIN}/oauth2/auth"
-          nginx.ingress.kubernetes.io/auth-signin: https://auth.${SECRET_DOMAIN}/oauth2/start
-          kubernetes.io/tls-acme: "true"
-          cert-manager.io/cluster-issuer: letsencrypt-production
-        tls: true
+      http:
+        ingress:
+          enabled: true
+          hosts:
+          - "thanos.${SECRET_DOMAIN}"
+          annotations:
+            kubernetes.io/ingress.class: nginx
+            nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16"
+            nginx.ingress.kubernetes.io/auth-url: "https://auth.${SECRET_DOMAIN}/oauth2/auth"
+            nginx.ingress.kubernetes.io/auth-signin: https://auth.${SECRET_DOMAIN}/oauth2/start
+            kubernetes.io/tls-acme: "true"
+            cert-manager.io/cluster-issuer: letsencrypt-production
+          tls:
+          - secretName: thanos-cert
     queryFrontend:
       enabled: false
-    bucketweb:
+    bucket:
       enabled: true
-    compactor:
+    compact:
       enabled: true
-      persistence:
-        enabled: false
-    storegateway:
+    store:
       enabled: true
-      persistence:
-        enabled: true
-        size: 20Gi
-        storageClassName: rook-ceph-block
-    ruler:
+      persistenceVolumeClaim:
+        spec:
+          storageClassName: rook-ceph-block
+          resources:
+            requests:
+              storage: 20Gi
+    rule:
       enabled: false
-    metrics:
-      enabled: true
-      serviceMonitor:
-        enabled: true
-    objstoreConfig: |-
-      type: s3
+    objstore:
+      type: S3
       config:
-        bucket: thanos
-        endpoint: rook-ceph-rgw-object-store.rook-ceph.svc:80
-        access_key: "${SECRET_THANOS_S3_ACCESS_KEY}"
-        secret_key: "${SECRET_THANOS_S3_SECRET_KEY}"
-        insecure: true
+        insecure: false
+        signature_version2: false
+        put_user_metadata: {}
+        http_config:
+          idle_conn_timeout: 0s
+          response_header_timeout: 0s
+          insecure_skip_verify: false
+        trace:
+          enable: false
+        part_size: 0
+  valuesFrom:
+  - kind: ConfigMap
+    name: thanos-ceph-bucket
+    valuesKey: BUCKET_NAME
+    targetPath: objstore.config.bucket
+  - kind: ConfigMap
+    name: thanos-ceph-bucket
+    valuesKey: BUCKET_HOST
+    targetPath: objstore.config.endpoint
+  - kind: ConfigMap
+    name: thanos-ceph-bucket
+    valuesKey: BUCKET_REGION
+    targetPath: objstore.config.region
+  - kind: Secret
+    name: thanos-ceph-bucket
+    valuesKey: AWS_ACCESS_KEY_ID
+    targetPath: objstore.config.access_key
+  - kind: Secret
+    name: thanos-ceph-bucket
+    valuesKey: AWS_SECRET_ACCESS_KEY
+    targetPath: objstore.config.secret_key
