--- a/cluster/apps/media/plex/helm-release.yaml
+++ b/cluster/apps/media/plex/helm-release.yaml
@@ -57,7 +57,7 @@ spec:
       media:
         enabled: true
         existingClaim: media-nfs-tank-share-pvc
-        mountPath: /media
+        mountPath: /data
     podAnnotations:
       configmap.reloader.stakater.com/reload: "plex-promtail"
     addons:
