--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -72,7 +72,7 @@ spec:
         - name: Prometheus
           type: prometheus
           access: proxy
-          url: http://thanos-query:9090/
+          url: http://thanos-query-http:10902/
           isDefault: true
         - name: loki
           type: loki
