add secrets for external-dns to talk to Azure

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -6,10 +6,6 @@ metadata:
   namespace: flux-system
 stringData:
   SECRET_DOMAIN: ENC[AES256_GCM,data:7PdZUHFhoaMIXQKr,iv:wY5azxHD+Kgck/XJ1Ty1MYjxkqAuMr7+lxYz1FoXWAA=,tag:OHKIFnNli/GO/vp1uchAMQ==,type:str]
-  SECRET_THANOS_S3_ACCESS_KEY: ENC[AES256_GCM,data:oaJxtNorIYjsWRLoKoJNw8cPlCs=,iv:eIjfcjhkt/yTrS9TI+blTCNTXBqoBgChfhUs3VkK520=,tag:9ogo88nJ9CaCUk7HPy48og==,type:str]
-  SECRET_THANOS_S3_SECRET_KEY: ENC[AES256_GCM,data:viHPt2k1vu1fwzHcK16Z9ZqEDh9RmThCFQzuqd/5Zavv3FEo+mqz7w==,iv:3jags4BIsSPQQhQc7rvyih7kLUmyjbY2zFr3iLYgPfM=,tag:2whFxfctP4yGxLjib95NaA==,type:str]
-  SECRET_LOKI_S3_ACCESS_KEY: ENC[AES256_GCM,data:tm22Co0EkWNHIuZjzWV5Guvy+w0=,iv:C/8SY/BRCZ/WyGPP96iSSOjC48g0/lFJ9uAWsGkBYxk=,tag:BreiTpng5ilraCdTy4jijw==,type:str]
-  SECRET_LOKI_S3_SECRET_KEY: ENC[AES256_GCM,data:Bjh2phLR5+BBUMw9EGFsQ0NKMEis06m2ThRFPe+DBC4cmcmCZwXlJA==,iv:Y3k+S3qB7ZBF3b/H9sAuwa7Jsr9LbmOrVVXuaEZxU4g=,tag:cGqlTqOcMcT2TLcn/MCnPw==,type:str]
   SECRET_DISCORD_KURED_WEBHOOK_URL: ENC[AES256_GCM,data:GhlAUKKQZi8PVzfH7+NCNrrtgco9redOBVWqt32WeaojRthq0FV1KjwbR+9L8NgsYIIHws9cEPkeXzcYiMW2CbyzYM37tLSJhQ/4Mt7zrK4tfGOn65ak3XxdzVR0f5dO4N7utld6mtCE+UqkMJovDWaI5D0Yo3Bx0P0uodqn,iv:g/hYI+iXdsJkdfbZpAFmfE2WVHZv238kIlAAOp5euNI=,tag:6Hw2V0gaEa1rauqC26T44A==,type:str]
   SECRET_AUTHENTIK_SECRET_KEY: ENC[AES256_GCM,data:KDDYtNQc6WrUe/3ZoCRab89nPIcqdWw0EcApQRzh9ER5KXXF7gQhXzCJuVmvLoF+,iv:KWDPQjNg3wc2QiUJafTHwVikwxOjcSHGSkBXkM1Niu0=,tag:3Wy8FBNda2LdyfiFXCcbaw==,type:str]
   SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:PSPtzb1eIzUnRtoAumI=,iv:HaJPQ/o4SM4g9a9HZ9fLhv8Ypj55IRrsiprU+SMH7II=,tag:EOGk2vx3BV4bn+tnaqJR6A==,type:str]
@@ -31,14 +27,19 @@ stringData:
   SECRET_GITEA_ADMIN_EMAIL: ENC[AES256_GCM,data:cm7eSI69tJf2zzjYotnULY8=,iv:gLY7La5FboywujgxyWEL6gMUBeave+uw5vUgBcL/iOw=,tag:DEGia3YHswZa1ZbkVWZOxQ==,type:str]
   SECRET_GITEA_SECRET_KEY: ENC[AES256_GCM,data:gfC2QwguiXDhip5GrGVSIlt7yx4vUczJdmEgqXqR,iv:3LbbpnJv9qVys5X8DxhdiXtj+hCAF2el3txNcqCJSEw=,tag:CLphso2WhLXQh1nCDM9wwQ==,type:str]
   SECRET_HASS_PROMETHEUS_TOKEN: ENC[AES256_GCM,data:G3V+BAlnQmTZGuswGfXTMdFQ7Qi1Qs+qyrmx2Yq+fXlkuZ07MMqJpMRmZ6Tirkcy3aFTCJFBtKfiUx+pmVM5YlV7weABHBfmMkyA5LwMudljPoI+5dJ526iI0FmlwKgvxMQ7lrmDwkc00ycQNME/9vwcC1fb3mrg51ao/sDtJTVb2EqBb/8V/BNLYbNjNa8zb0c/PnNDS6PZmeiMhW68lCpaTLuBWfye38Of6jSvZnuoLLoGA3Vq,iv:h5SDqo8FbEuzTqAc1ps4kyTYAn9OR9IQsEWTef2yeao=,tag:RkcA5HOXQnsfo9eFkeZXNg==,type:str]
+  SECRET_AZURE_DNS_RESOURCE_GROUP: ENC[AES256_GCM,data:UabPw1DGYunsh65H,iv:d5t+MlwYF+Iw+mj51hN2jaJB3Bi8l0IPfFFiWWv5Nqo=,tag:J1CEkR2zdpJ8v8A8jXRNTQ==,type:str]
+  SECRET_AZURE_DNS_TENANT_ID: ENC[AES256_GCM,data:E7Ljj2VRwCGdz/fUFPmMwLQv0u706IKrw1RaI1IAp01VhgwS,iv:lFEbjE2rvyCaOdKiBmZS2bI1ulSVAeKYv1XR2R3gwzU=,tag:vxgclHNqK7McXD7kRVWUHw==,type:str]
+  SECRET_AZURE_DNS_SUBSCRIPTION_ID: ENC[AES256_GCM,data:g2HWTVL/GwP21T9dgmNC/wMl/EvR0UCULYwLRSTLhNieU4QO,iv:NvwR3GWQliW8cj5I+zGOFR5BM/3tIARTR2rZf7lZPyE=,tag:rmvpMJSUCIWolvYZBFOUDw==,type:str]
+  SECRET_AZURE_DNS_CLIENT_ID: ENC[AES256_GCM,data:CeEmLYIrN10JskkdGaYlxxv5lJys4JCqGNH7rG7EAAoTJEDr,iv:Yg3IhjVb2wB4IzmPZAMAIsfcr1XoS9jyi/PjjiPnEk0=,tag:cCnfoM8J3JpWs1S75C+i/Q==,type:str]
+  SECRET_AZURE_DNS_CLIENT_SECRET: ENC[AES256_GCM,data:ekwygmVHV74ZYknvgdK3dWKh7I0Qx2KZ2kDTL3fEEmWjEQ==,iv:+9xxGSqqh9ZGGVtYEletyMp8PwHOa7J87r/o01LWhsE=,tag:hJBmAiLuhysCeOw9+3HTHw==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-06-28T19:48:48Z"
-  mac: ENC[AES256_GCM,data:07BJtSaSlJ01+7Mb2r4Z4WwWq+bB37xzfbJ2olDnTpf7h7wjdEwu6RVTFk4n+OK/mwAr65EYwygXzMVpHynIFdC8u7pkq4yI+38Nf+a+uJwKIRxiqtLeWsVMwbhvYgb0o8ifSyM6648xFOIWghZVHoYunncR26kb4+mo1j2AEyU=,iv:ES2wQwyrXf1PlN5C7yHo/vIeHiLbowOamdQpYuPAyak=,tag:yMSXNk54yP9qjQAtAjyJzw==,type:str]
+  lastmodified: "2021-07-07T18:19:47Z"
+  mac: ENC[AES256_GCM,data:3itSTKOJl6NdiCIyevoMBwospNkJwLl3WU5wUWBkEtjxH5IAIQrrk7te0BaHb49MzkjlW/LWp0DAQcvW1+VKUwb5rlXgb2L0joyce+gwV87FwPSitJ0R/zYXxx513QQ3+InUobvF005RVX40HySxFS55nwxxoAP49ea5gLtIdE0=,iv:QCDzCW6njVDqxCT1wV7979UfH6oJrUWVVdqextXvbsQ=,tag:e/bhTqw0gxqgchB2Ucd7zw==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
