--- a/cluster/apps/media/sonarr/helm-release.yaml
+++ b/cluster/apps/media/sonarr/helm-release.yaml
@@ -46,6 +46,8 @@ spec:
         ingressClassName: "nginx"
         annotations:
           kubernetes.io/ingress.class: "nginx"
+          external-dns/is-public: "true"
+          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
         hosts:
         - host: "sonarr.${SECRET_DOMAIN}"
           paths:
