--- a/cluster/apps/default/bitwarden/helm-release.yaml
+++ b/cluster/apps/default/bitwarden/helm-release.yaml
@@ -49,6 +49,8 @@ spec:
         kubernetes.io/ingress.class: nginx
         kubernetes.io/tls-acme: "true"
         cert-manager.io/cluster-issuer: letsencrypt-production
+        external-dns/is-public: "true"
+        external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
       hosts:
         - host: "bitwarden.${SECRET_DOMAIN}"
           paths:
