--- a/cluster/apps/default/teedy/helm-release.yaml
+++ b/cluster/apps/default/teedy/helm-release.yaml
@@ -42,6 +42,8 @@ spec:
           nginx.ingress.kubernetes.io/proxy-body-size: 128m
           kubernetes.io/tls-acme: "true"
           cert-manager.io/cluster-issuer: letsencrypt-production
+          external-dns/is-public: "true"
+          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
         hosts:
         - host: "docs.${SECRET_DOMAIN}"
           paths:
