--- a/cluster/apps/media/resilio-sync/stateful-set.yaml
+++ b/cluster/apps/media/resilio-sync/stateful-set.yaml
@@ -209,6 +209,8 @@ kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: "nginx"
+    external-dns/is-public: "true"
+    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
   labels:
     app.kubernetes.io/instance: resilio-sync
     app.kubernetes.io/name: resilio-sync
