--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -157,6 +157,8 @@ spec:
       enabled: true
       annotations:
         kubernetes.io/ingress.class: "nginx"
+        external-dns/is-public: "true"
+        external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
       hosts:
       - "grafana.${SECRET_DOMAIN}"
       tls:
