--- a/cluster/apps/network/unifi/helm-release.yaml
+++ b/cluster/apps/network/unifi/helm-release.yaml
@@ -33,6 +33,8 @@ spec:
         nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
         kubernetes.io/tls-acme: "true"
         cert-manager.io/cluster-issuer: letsencrypt-production
+        external-dns/is-public: "true"
+        external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
       hosts:
         - "unifi.${SECRET_DOMAIN}"
       tls:
