--- a/cluster/apps/security/dex/helm-release.yaml
+++ b/cluster/apps/security/dex/helm-release.yaml
@@ -26,6 +26,8 @@ spec:
         kubernetes.io/ingress.class: "nginx"
         kubernetes.io/tls-acme: "true"
         cert-manager.io/cluster-issuer: letsencrypt-production
+        external-dns/is-public: "true"
+        external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
       hosts:
         - "dex.${SECRET_DOMAIN}"
       tls:
