--- a/cluster/apps/security/keycloak/helm-release.yaml
+++ b/cluster/apps/security/keycloak/helm-release.yaml
@@ -32,6 +32,8 @@ spec:
         kubernetes.io/ingress.class: nginx
         kubernetes.io/tls-acme: "true"
         cert-manager.io/cluster-issuer: letsencrypt-production
+        external-dns/is-public: "true"
+        external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
       rules:
         - host: "keycloak.${SECRET_DOMAIN}"
           paths:
