--- a/cluster/apps/security/oauth2-proxy/helm-release.yaml
+++ b/cluster/apps/security/oauth2-proxy/helm-release.yaml
@@ -26,6 +26,8 @@ spec:
       path: /oauth2
       annotations:
         kubernetes.io/ingress.class: "nginx"
+        external-dns/is-public: "true"
+        external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
       hosts:
       - "auth.${SECRET_DOMAIN}"
       tls:
