--- a/cluster/apps/flux-system/webhook/github/ingress.yaml
+++ b/cluster/apps/flux-system/webhook/github/ingress.yaml
@@ -6,6 +6,8 @@ metadata:
   namespace: flux-system
   annotations:
     kubernetes.io/ingress.class: "nginx"
+    external-dns/is-public: "true"
+    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
 spec:
   rules:
   - host: "flux-receiver.${SECRET_DOMAIN}"
