fix receiver to use proper token

--- a/cluster/apps/flux-system/webhook/github/receiver.yaml
+++ b/cluster/apps/flux-system/webhook/github/receiver.yaml
@@ -10,7 +10,7 @@ spec:
   - "ping"
   - "push"
   secretRef:
-    name: github-webhook-token
+    name: webhook-token
   resources:
   - kind: GitRepository
     name: flux-system
