--- a/cluster/apps/media/gaps/helm-release.yaml
+++ b/cluster/apps/media/gaps/helm-release.yaml
@@ -24,18 +24,19 @@ spec:
     env:
       TZ: "America/New_York"
     ingress:
-      enabled: true
-      annotations:
-        kubernetes.io/ingress.class: "nginx"
-      hosts:
-      - host: "gaps.${SECRET_DOMAIN}"
-        paths:
-        - path: /
-          pathType: Prefix
-      tls:
-      - hosts:
-        - "gaps.${SECRET_DOMAIN}"
-        secretName: gaps-cert
+      main:
+        enabled: true
+        annotations:
+          kubernetes.io/ingress.class: "nginx"
+        hosts:
+        - host: "gaps.${SECRET_DOMAIN}"
+          paths:
+          - path: /
+            pathType: Prefix
+        tls:
+        - hosts:
+          - "gaps.${SECRET_DOMAIN}"
+          secretName: gaps-cert
     persistence:
       data:
         enabled: true
