--- a/cluster/apps/media/kustomization.yaml
+++ b/cluster/apps/media/kustomization.yaml
@@ -2,18 +2,18 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- _pvc
-- bazarr
-- flaresolverr
-# - gaps
-- jackett
-- nzbhydra
-- overseerr
-- plex
-- qbittorrent
-- radarr
-- radarr-uhd
-- resilio-sync
-- sabnzbd
-- sonarr
-- tautulli
+  - _pvc
+  - bazarr
+  - flaresolverr
+  - gaps
+  - jackett
+  - nzbhydra
+  - overseerr
+  - plex
+  - qbittorrent
+  - radarr
+  - radarr-uhd
+  - resilio-sync
+  - sabnzbd
+  - sonarr
+  - tautulli
