add cleanup operator

--- a/cluster/apps/kube-system/kustomization.yaml
+++ b/cluster/apps/kube-system/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - _pvc
 # - democratic-csi
 - external-secrets
+- kube-cleanup-operator
 - metrics-server
 - nginx
 - node-feature-discovery
