--- a/cluster/base/flux-system/charts/helm/kustomization.yaml
+++ b/cluster/base/flux-system/charts/helm/kustomization.yaml
@@ -2,43 +2,44 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- appscode-charts.yaml
-- authentik-charts.yaml
-- banzaicloud-charts.yaml
-- bitnami-charts.yaml
-- bitwardenrs-charts.yaml
-- codecentric-charts.yaml
-- coredns-charts.yaml
-- dacruz21-charts.yaml
-- democratic-csi-charts.yaml
-- dex-charts.yaml
-- dexidp-charts.yaml
-- fairwinds-charts.yaml
-- falco-security-charts.yaml
-- gatekeeper-charts.yaml
-- gitea-charts.yaml
-- grafana-charts.yaml
-- grafana-loki-charts.yaml
-- influxdata-charts.yaml
-- infracloudio-charts.yaml
-- ingress-nginx-charts.yaml
-- jetstack-charts.yaml
-- k8s-at-home-charts.yaml
-- kasten-charts.yaml
-- kubernetes-external-secrets-charts.yaml
-- kubernetes-sigs-descheduler-charts.yaml
-- kubernetes-stable-charts.yaml
-- minio-charts.yaml
-- nicholaswilde-charts.yaml
-- oauth2-proxy-charts.yaml
-- ory-charts.yaml
-- pomerium-charts.yaml
-- prometheus-community-charts.yaml
-- rook-ceph-charts.yaml
-- stakater-charts.yaml
-- timberio-charts.yaml
-- traefik-charts.yaml
-- vernemq-charts.yaml
-- vmware-tanzu-charts.yaml
-- weaveworks-kured-charts.yaml
-- yourls-charts.yaml
+  - appscode-charts.yaml
+  - authentik-charts.yaml
+  - banzaicloud-charts.yaml
+  - bitnami-charts.yaml
+  - bitwardenrs-charts.yaml
+  - codecentric-charts.yaml
+  - coredns-charts.yaml
+  - dacruz21-charts.yaml
+  - democratic-csi-charts.yaml
+  - dex-charts.yaml
+  - dexidp-charts.yaml
+  - fairwinds-charts.yaml
+  - falco-security-charts.yaml
+  - gatekeeper-charts.yaml
+  - gitea-charts.yaml
+  - grafana-charts.yaml
+  - grafana-loki-charts.yaml
+  - influxdata-charts.yaml
+  - infracloudio-charts.yaml
+  - ingress-nginx-charts.yaml
+  - jetstack-charts.yaml
+  - k8s-at-home-charts.yaml
+  - kasten-charts.yaml
+  - kubernetes-external-secrets-charts.yaml
+  - kubernetes-sigs-descheduler-charts.yaml
+  - kubernetes-stable-charts.yaml
+  - lwolf-charts.yaml
+  - minio-charts.yaml
+  - nicholaswilde-charts.yaml
+  - oauth2-proxy-charts.yaml
+  - ory-charts.yaml
+  - pomerium-charts.yaml
+  - prometheus-community-charts.yaml
+  - rook-ceph-charts.yaml
+  - stakater-charts.yaml
+  - timberio-charts.yaml
+  - traefik-charts.yaml
+  - vernemq-charts.yaml
+  - vmware-tanzu-charts.yaml
+  - weaveworks-kured-charts.yaml
+  - yourls-charts.yaml
