--- a/cluster/apps/kube-system/kustomization.yaml
+++ b/cluster/apps/kube-system/kustomization.yaml
@@ -2,14 +2,15 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- _pvc
-# - democratic-csi
-- external-secrets
-- kube-cleanup-operator
-- metrics-server
-- nginx
-- node-feature-discovery
-- rbac
-- registry-creds
-- reloader
-- kured
+  - _pvc
+  # - democratic-csi
+  - descheduler
+  - external-secrets
+  - kube-cleanup-operator
+  - metrics-server
+  - nginx
+  - node-feature-discovery
+  - rbac
+  - registry-creds
+  - reloader
+  - kured
