--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -9,6 +9,7 @@ data:
   GATEWAY_IP: "10.20.0.1"
   # Service IPs
   SVC_NGINX_ADDRESS: "10.45.10.10"
+  SVC_TRAEFIK_ADDRESS: "10.45.20.10"
   SVC_VERNEMQ_ADDRESS: "10.45.10.11"
   SVC_GITEA_ADDRESS: "10.45.10.12"
   SVC_ADGUARD_ADDRESS: "10.45.10.13"
