--- a/cluster/apps/media/sonarr/helm-release.yaml
+++ b/cluster/apps/media/sonarr/helm-release.yaml
@@ -26,8 +26,8 @@ spec:
     ingress:
       main:
         enabled: true
+        ingressClassName: "nginx"
         annotations:
-          kubernetes.io/ingress.class: "nginx"
           kubernetes.io/tls-acme: "true"
           cert-manager.io/cluster-issuer: letsencrypt-production
           nginx.ingress.kubernetes.io/auth-url: "https://auth.${SECRET_DOMAIN}/oauth2/auth"
@@ -46,8 +46,6 @@ spec:
       api:
         enabled: true
         ingressClassName: "nginx"
-        annotations:
-          kubernetes.io/ingress.class: "nginx"
         hosts:
         - host: "sonarr.${SECRET_DOMAIN}"
           paths:
