--- a/cluster/apps/collab/openkm/helm-release.yaml
+++ b/cluster/apps/collab/openkm/helm-release.yaml
@@ -30,19 +30,20 @@ spec:
         accessMode: ReadWriteOnce
         size: 10Gi
     ingress:
-      enabled: true
-      annotations:
-        kubernetes.io/ingress.class: "nginx"
-        kubernetes.io/tls-acme: "true"
-        cert-manager.io/cluster-issuer: "letsencrypt-production"
-        external-dns/is-public: "true"
-        external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
-      hosts:
-        - "openkm.${SECRET_DOMAIN}"
-      tls:
-        - hosts:
-            - "openkm.${SECRET_DOMAIN}"
-          secretName: openkm-tls
+      main:
+        enabled: true
+        annotations:
+          kubernetes.io/ingress.class: "nginx"
+          kubernetes.io/tls-acme: "true"
+          cert-manager.io/cluster-issuer: "letsencrypt-production"
+          external-dns/is-public: "true"
+          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
+        hosts:
+          - "openkm.${SECRET_DOMAIN}"
+        tls:
+          - hosts:
+              - "openkm.${SECRET_DOMAIN}"
+            secretName: openkm-tls
     postgresql:
       enabled: true
       postgresqlDatabase: openkm
