add mailgun auth info

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -32,14 +32,16 @@ stringData:
   SECRET_AZURE_DNS_SUBSCRIPTION_ID: ENC[AES256_GCM,data:g2HWTVL/GwP21T9dgmNC/wMl/EvR0UCULYwLRSTLhNieU4QO,iv:NvwR3GWQliW8cj5I+zGOFR5BM/3tIARTR2rZf7lZPyE=,tag:rmvpMJSUCIWolvYZBFOUDw==,type:str]
   SECRET_AZURE_DNS_CLIENT_ID: ENC[AES256_GCM,data:CeEmLYIrN10JskkdGaYlxxv5lJys4JCqGNH7rG7EAAoTJEDr,iv:Yg3IhjVb2wB4IzmPZAMAIsfcr1XoS9jyi/PjjiPnEk0=,tag:cCnfoM8J3JpWs1S75C+i/Q==,type:str]
   SECRET_AZURE_DNS_CLIENT_SECRET: ENC[AES256_GCM,data:ekwygmVHV74ZYknvgdK3dWKh7I0Qx2KZ2kDTL3fEEmWjEQ==,iv:+9xxGSqqh9ZGGVtYEletyMp8PwHOa7J87r/o01LWhsE=,tag:hJBmAiLuhysCeOw9+3HTHw==,type:str]
+  SECRET_MAILGUN_USERNAME: ENC[AES256_GCM,data:BFUjcoP0zlWBXr9F/IZxcHHM7vJOmeo=,iv:o3FZGTvVoB59URlzEoRnpAINI183EeQC7Sf6b50KdNA=,tag:BSPpGRZFV45ZAI8HoV24sg==,type:str]
+  SECRET_MAILGUN_PASSWORD: ENC[AES256_GCM,data:0xAqp2/alfrJo4HCLxOSNzcYMMRI9Cx56d3ibd0oVUcAQYQP/UDd+lvDSZuTra4crLA=,iv:UJUF39rYs9ks+BiZMAQD7PFI5bDcl63siBs5V0Qs7/c=,tag:hRtL/tJl8a5Eyi/ZCvP4tQ==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-07-07T18:19:47Z"
-  mac: ENC[AES256_GCM,data:3itSTKOJl6NdiCIyevoMBwospNkJwLl3WU5wUWBkEtjxH5IAIQrrk7te0BaHb49MzkjlW/LWp0DAQcvW1+VKUwb5rlXgb2L0joyce+gwV87FwPSitJ0R/zYXxx513QQ3+InUobvF005RVX40HySxFS55nwxxoAP49ea5gLtIdE0=,iv:QCDzCW6njVDqxCT1wV7979UfH6oJrUWVVdqextXvbsQ=,tag:e/bhTqw0gxqgchB2Ucd7zw==,type:str]
+  lastmodified: "2021-07-09T19:53:09Z"
+  mac: ENC[AES256_GCM,data:uYLh39hrT3nOsJRy408uxqQIv6VS+5W9LKyBj8ZD4yGEJLuOVz/+drl35bHX6tr6dIiqCpnBqXO6H2cqAzFYS9sYNdeF5ewao21rMW1SQLmRD36ztBD7J5x7aTLnK4CA+Txe69YZLRc8RZ6AH3YYECQ3UnCPgoVy/0P9pbIwaw4=,iv:M4kv3JjMI37RjowfGVnMIb+qxpzTxw26hA7PYP0oye4=,tag:X4heoQAEnI4LuMxFNaRRXg==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
