inital add for mailu secrets

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -34,14 +34,16 @@ stringData:
   SECRET_AZURE_DNS_CLIENT_SECRET: ENC[AES256_GCM,data:ekwygmVHV74ZYknvgdK3dWKh7I0Qx2KZ2kDTL3fEEmWjEQ==,iv:+9xxGSqqh9ZGGVtYEletyMp8PwHOa7J87r/o01LWhsE=,tag:hJBmAiLuhysCeOw9+3HTHw==,type:str]
   SECRET_MAILGUN_USERNAME: ENC[AES256_GCM,data:BFUjcoP0zlWBXr9F/IZxcHHM7vJOmeo=,iv:o3FZGTvVoB59URlzEoRnpAINI183EeQC7Sf6b50KdNA=,tag:BSPpGRZFV45ZAI8HoV24sg==,type:str]
   SECRET_MAILGUN_PASSWORD: ENC[AES256_GCM,data:0xAqp2/alfrJo4HCLxOSNzcYMMRI9Cx56d3ibd0oVUcAQYQP/UDd+lvDSZuTra4crLA=,iv:UJUF39rYs9ks+BiZMAQD7PFI5bDcl63siBs5V0Qs7/c=,tag:hRtL/tJl8a5Eyi/ZCvP4tQ==,type:str]
+  SECRET_MAILU_POSTMASTER_PASSWORD: ENC[AES256_GCM,data:HfTzfFeGXl9HGnSTS8FV,iv:0/5SX2aoeFy8LhxEn14mhzFmUbKe0rltkrKKddzEBHU=,tag:U/aWV9Qz7nWv+GwSda9THA==,type:str]
+  SECRET_MAILU_SECRET_KEY: ENC[AES256_GCM,data:CcvLkAFHSeI=,iv:295/zU68dXx5eXX9Zo64OYzg2HQx2nOcvc3LkAHFDhs=,tag:0l9KBheYmbn8Q04CdJxipA==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-07-09T19:53:09Z"
-  mac: ENC[AES256_GCM,data:uYLh39hrT3nOsJRy408uxqQIv6VS+5W9LKyBj8ZD4yGEJLuOVz/+drl35bHX6tr6dIiqCpnBqXO6H2cqAzFYS9sYNdeF5ewao21rMW1SQLmRD36ztBD7J5x7aTLnK4CA+Txe69YZLRc8RZ6AH3YYECQ3UnCPgoVy/0P9pbIwaw4=,iv:M4kv3JjMI37RjowfGVnMIb+qxpzTxw26hA7PYP0oye4=,tag:X4heoQAEnI4LuMxFNaRRXg==,type:str]
+  lastmodified: "2021-07-25T19:00:30Z"
+  mac: ENC[AES256_GCM,data:2uigfL1C2mQ3+IZ5mvZWNjSA8OkuMr+vI5ao2tJglNGwxfiugF5OlRpRwDlfJHYA3YAG51kLE9D1JUdC05Jgvry7/cgU2E2vjxg4xkB++fjEARQZBYZrbu0W5meG6uleTtera3UwAy6p/06A/7HN+VGfH9LMTN51V4iQA0g9Sp8=,iv:Bq9SFWnBFSL2cqRwNeCvv4uRltRafy2p4bisHUmIw/A=,tag:PSf1h8AH4Ob8Fj7gHg+zSA==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
