--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -20,3 +20,4 @@ data:
   SVC_COREDNS_ADDRESS_INTERNAL: "10.43.10.53"
   SVC_PLEX_ADDRESS: "10.45.100.100"
   SVC_QBITTORRENT_ADDRESS: "10.20.50.157"
+  NETWORK_K8S_CLUSTER_CIDR: "10.42.0.0/16"
