--- a/cluster/core/namespaces/kustomization.yaml
+++ b/cluster/core/namespaces/kustomization.yaml
@@ -2,17 +2,18 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- actions-runner-system.yaml
-- cert-manager.yaml
-- collab.yaml
-- default.yaml
-- flux-system.yaml
-- home.yaml
-- kasten-io.yaml
-- kube-system.yaml
-- logs.yaml
-- media.yaml
-- monitoring.yaml
-- network.yaml
-- rook-ceph.yaml
-- security.yaml
+  - actions-runner-system.yaml
+  - cert-manager.yaml
+  - collab.yaml
+  - default.yaml
+  - flux-system.yaml
+  - home.yaml
+  - kasten-io.yaml
+  - kube-system.yaml
+  - logs.yaml
+  - mail.yaml
+  - media.yaml
+  - monitoring.yaml
+  - network.yaml
+  - rook-ceph.yaml
+  - security.yaml
