--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -36,14 +36,15 @@ stringData:
   SECRET_MAILGUN_PASSWORD: ENC[AES256_GCM,data:0xAqp2/alfrJo4HCLxOSNzcYMMRI9Cx56d3ibd0oVUcAQYQP/UDd+lvDSZuTra4crLA=,iv:UJUF39rYs9ks+BiZMAQD7PFI5bDcl63siBs5V0Qs7/c=,tag:hRtL/tJl8a5Eyi/ZCvP4tQ==,type:str]
   SECRET_MAILU_POSTMASTER_PASSWORD: ENC[AES256_GCM,data:HfTzfFeGXl9HGnSTS8FV,iv:0/5SX2aoeFy8LhxEn14mhzFmUbKe0rltkrKKddzEBHU=,tag:U/aWV9Qz7nWv+GwSda9THA==,type:str]
   SECRET_MAILU_SECRET_KEY: ENC[AES256_GCM,data:CcvLkAFHSeI=,iv:295/zU68dXx5eXX9Zo64OYzg2HQx2nOcvc3LkAHFDhs=,tag:0l9KBheYmbn8Q04CdJxipA==,type:str]
+  SECRET_DEX_VULTR_CLIENT_SECRET: ENC[AES256_GCM,data:6Ps7r64zv/ltEYjRZcKGg+qHiVMPUOe1VGUg9ALZdytNQOp8eonHA5Nl,iv:ZWGEc+pBLbyMhBq7C+5c67j6G/CWVTtcL/FY5aoVyCE=,tag:PLPpvtwj3yIKn9IpFq1AZg==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-07-25T19:00:30Z"
-  mac: ENC[AES256_GCM,data:2uigfL1C2mQ3+IZ5mvZWNjSA8OkuMr+vI5ao2tJglNGwxfiugF5OlRpRwDlfJHYA3YAG51kLE9D1JUdC05Jgvry7/cgU2E2vjxg4xkB++fjEARQZBYZrbu0W5meG6uleTtera3UwAy6p/06A/7HN+VGfH9LMTN51V4iQA0g9Sp8=,iv:Bq9SFWnBFSL2cqRwNeCvv4uRltRafy2p4bisHUmIw/A=,tag:PSf1h8AH4Ob8Fj7gHg+zSA==,type:str]
+  lastmodified: "2021-07-25T19:31:15Z"
+  mac: ENC[AES256_GCM,data:LSdn8ZQv5tepAq7CVgGujqfME3yZlo4GOsOQ2xTNGK0905vmkC+LzAInbjDpBcpsLFj2ccsLjg3tW0NduEr7FvqvaHtOcNUHOudtIBu4+1UviMPO321WWgG4qs3fNXgmYXTi4eRAfG3IpbmVtMDzE+N01kwCtxNAXtW9cnS6HVQ=,iv:zeWh3qEDEnAwFfv5I0zVb/aF80NqTyJfJrUIk5AbnKY=,tag:z5Sv3LUJOfA6sZHM/VH3vQ==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
