--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -2,15 +2,16 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- collab
-- default
-- flux-system
-- home
-- kasten-io
-- kube-system
-- logs
-- media
-- monitoring
-- network
-- security
+  - collab
+  - default
+  - flux-system
+  - home
+  - kasten-io
+  - kube-system
+  - logs
+  - mail
+  - media
+  - monitoring
+  - network
+  - security
 # - system-upgrade
