--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -22,3 +22,4 @@ data:
   SVC_QBITTORRENT_ADDRESS: "10.20.50.157"
   NETWORK_K8S_CLUSTER_CIDR: "10.42.0.0/16"
   NETWORK_K8S_SERVICE_CIDR: "10.43.0.0/16"
+  NETWORK_MANAGEMENT_CIDR: "10.20.0.0/16"
