fix pool name for cephfs

--- a/cluster/core/rook-ceph/storage/ceph-cephfs-storage-class.yaml
+++ b/cluster/core/rook-ceph/storage/ceph-cephfs-storage-class.yaml
@@ -7,7 +7,7 @@ provisioner: rook-ceph.cephfs.csi.ceph.com
 parameters:
   clusterID: rook-ceph
   fsName: cephfs
-  pool: cephfs_data
+  pool: cephfs-data0
   csi.storage.k8s.io/provisioner-secret-name: rook-csi-cephfs-provisioner
   csi.storage.k8s.io/provisioner-secret-namespace: rook-ceph
   csi.storage.k8s.io/node-stage-secret-name: rook-csi-cephfs-node
