--- a/cluster/apps/network/traefik/middlewares/kustomization.yaml
+++ b/cluster/apps/network/traefik/middlewares/kustomization.yaml
@@ -5,5 +5,6 @@ resources:
   # - cloudflare.yaml
   - rfc1918.yaml
   - redirect-path.yaml
+  - internal-auth.yaml
   # - secret.enc.yaml
   # - basic-auth.yaml
