--- a/cluster/apps/collab/gitea/helm-release.yaml
+++ b/cluster/apps/collab/gitea/helm-release.yaml
@@ -35,7 +35,10 @@ spec:
         external-dns/is-public: "true"
         external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
       hosts:
-      - "git.${SECRET_DOMAIN}"
+      - host: "git.${SECRET_DOMAIN}"
+        paths:
+          - path: /
+            pathType: Prefix
       tls:
       - hosts:
         - "git.${SECRET_DOMAIN}"
