add auth back to esphome

--- a/cluster/apps/home/esphome/helm-release.yaml
+++ b/cluster/apps/home/esphome/helm-release.yaml
@@ -33,7 +33,7 @@ spec:
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-          # traefik.ingress.kubernetes.io/router.middlewares: "network-internal-auth@kubernetescrd"
+          traefik.ingress.kubernetes.io/router.middlewares: "network-internal-auth@kubernetescrd"
           kubernetes.io/tls-acme: "true"
         hosts:
         - host: "esphome.${SECRET_DOMAIN}"
