mass flip to traefik

--- a/cluster/apps/home/mealie/helm-release.yaml
+++ b/cluster/apps/home/mealie/helm-release.yaml
@@ -28,8 +28,8 @@ spec:
     ingress:
       main:
         enabled: true
+        ingressClassName: "traefik"
         annotations:
-          kubernetes.io/ingress.class: "nginx"
           cert-manager.io/cluster-issuer: letsencrypt-production
           kubernetes.io/tls-acme: "true"
           external-dns/is-public: "true"
