--- a/cluster/apps/kasten-io/k10/helm-release.yaml
+++ b/cluster/apps/kasten-io/k10/helm-release.yaml
@@ -40,7 +40,7 @@ spec:
     clusterName: k8s
     ingress:
       create: true
-      class: "nginx"
+      class: "traefik"
       host: "k10.${SECRET_DOMAIN}"
       annotations:
         kubernetes.io/tls-acme: "true"
