--- a/cluster/apps/media/nzbhydra/helm-release.yaml
+++ b/cluster/apps/media/nzbhydra/helm-release.yaml
@@ -29,10 +29,13 @@ spec:
     ingress:
       main:
         enabled: true
+        ingressClassName: "traefik"
         annotations:
           kubernetes.io/ingress.class: "nginx"
           kubernetes.io/tls-acme: "true"
           cert-manager.io/cluster-issuer: letsencrypt-production
+          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+          traefik.ingress.kubernetes.io/router.middlewares: "network-internal-auth@kubernetescrd"
         hosts:
         - host: "nzbhydra.${SECRET_DOMAIN}"
           paths:
