--- a/cluster/apps/media/resilio-sync/stateful-set.yaml
+++ b/cluster/apps/media/resilio-sync/stateful-set.yaml
@@ -208,7 +208,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   annotations:
-    kubernetes.io/ingress.class: "nginx"
+    kubernetes.io/ingress.class: "traefik"
     external-dns/is-public: "true"
     external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
   labels:
