--- a/cluster/apps/network/adguard/helm-release.yaml
+++ b/cluster/apps/network/adguard/helm-release.yaml
@@ -85,7 +85,7 @@ spec:
     ingress:
       main:
         enabled: true
-        ingressClassName: "nginx"
+        ingressClassName: "traefik"
         # annotations:
         #   kubernetes.io/ingress.class: "nginx"
         #   # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
