--- a/cluster/apps/network/unifi/helm-release.yaml
+++ b/cluster/apps/network/unifi/helm-release.yaml
@@ -27,20 +27,21 @@ spec:
     timezone: "America/New_York"
     runAsRoot: true
     ingress:
-      enabled: true
-      annotations:
-        kubernetes.io/ingress.class: "nginx"
-        nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
-        kubernetes.io/tls-acme: "true"
-        cert-manager.io/cluster-issuer: letsencrypt-production
-        external-dns/is-public: "true"
-        external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
-      hosts:
-        - "unifi.${SECRET_DOMAIN}"
-      tls:
-        - hosts:
-            - "unifi.${SECRET_DOMAIN}"
-          secretName: unifi-cert
+      main:
+        enabled: true
+        ingressClassName: "traefik"
+        annotations:
+          kubernetes.io/tls-acme: "true"
+          cert-manager.io/cluster-issuer: letsencrypt-production
+          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+          external-dns/is-public: "true"
+          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
+        hosts:
+          - "unifi.${SECRET_DOMAIN}"
+        tls:
+          - hosts:
+              - "unifi.${SECRET_DOMAIN}"
+            secretName: unifi-cert
     guiService:
       type: LoadBalancer
       externalIPs:
@@ -60,8 +61,6 @@ spec:
       externalTrafficPolicy: Local
       externalIPs:
         - 10.45.10.17
-    podAnnotations:
-      backup.velero.io/backup-volumes: unifi-data
     resources:
       requests:
         memory: 500Mi
