--- a/cluster/apps/security/dex-k8s-authenticator/helm-release.yaml
+++ b/cluster/apps/security/dex-k8s-authenticator/helm-release.yaml
@@ -25,7 +25,7 @@ spec:
     ingress:
       enabled: true
       annotations:
-        kubernetes.io/ingress.class: "nginx"
+        kubernetes.io/ingress.class: "traefik"
         kubernetes.io/tls-acme: "true"
         cert-manager.io/cluster-issuer: letsencrypt-production
         external-dns/is-public: "true"
