--- a/cluster/apps/security/oauth2-proxy/helm-release.yaml
+++ b/cluster/apps/security/oauth2-proxy/helm-release.yaml
@@ -25,7 +25,7 @@ spec:
       enabled: true
       path: /oauth2
       annotations:
-        kubernetes.io/ingress.class: "nginx"
+        kubernetes.io/ingress.class: "traefik"
         external-dns/is-public: "true"
         external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
       hosts:
